Fix homepage title background colour bug on safari

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 h1.title {
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 0 1rem;
 }
 
